<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ScrollView01"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:paddingTop="5dip">
  <LinearLayout
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <TextView
      android:id="@+id/TextView02"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/msg_search_description"
      android:layout_marginLeft="10dip"></TextView>
    <TableLayout
      android:id="@+id/TableLayout01"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:stretchColumns="1"
      android:layout_margin="5dip">
      <TableRow
        android:id="@+id/TableRow02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/msg_search_start_date"
          android:id="@+id/StartDateText"
          android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dip"
          android:id="@+id/StartDateButton"></Button>
      </TableRow>
      <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/msg_search_end_date"
          android:id="@+id/EndDateText"
          android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dip"
          android:id="@+id/EndDateButton"></Button>
      </TableRow>
      <TableRow
        android:id="@+id/TableRow01"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
          android:id="@+id/TextView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/msg_search_term"
          android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText
          android:id="@+id/EditText01"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_marginLeft="10dip"
          android:hint="@string/msg_search_hint"
          android:imeOptions="actionDone"
          android:inputType="text"></EditText>
      </TableRow>
    </TableLayout>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/msg_search_button"
      android:id="@+id/SearchButton">
    </Button>
  </LinearLayout>
</ScrollView>